--- a/des_project/messenger/templates/register.html
+++ b/des_project/messenger/templates/register.html
@@ -1,9 +1,13 @@
 {% extends "base.html" %}
 {% block content %}
-<h2>Đăng ký tài khoản</h2>
-<form method="post" class="card p-4 shadow-sm">
-    {% csrf_token %}
-    {{ form.as_p }}
-    <button type="submit" class ="btn btn-primary">Đăng ký</button>
-</form>
+<div class="row justify-content-center">
+    <div class="col-md-6 col-lg-5">
+        <h2 class="mb-4 text-center">Đăng ký tài khoản</h2>
+        <form method="post" class="card p-4 shadow-sm bg-white border-0">
+            {% csrf_token %}
+            {{ form.as_p }}
+            <button type="submit" class="btn btn-primary w-100">Đăng ký</button>
+        </form>
+    </div>
+</div>
 {% endblock %}
